--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/available_food_donations"
+        android:text="Available Food Donations"
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="center" />
@@ -17,5 +16,5 @@
         android:id="@+id/addFoodButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_food_donation" />
+        android:text="Add Food Donation" />
 </LinearLayout>
