--- a/app/src/main/res/layout/activity_food_form.xml
+++ b/app/src/main/res/layout/activity_food_form.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,19 +9,21 @@
         android:id="@+id/foodName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="Enter Food Name"
-        android:inputType="text" />
+        android:inputType="text"/>
 
     <EditText
         android:id="@+id/expiryDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter Expiry Date"
-        android:inputType="text" />
+        android:inputType="date"/>
 
     <Button
         android:id="@+id/submitFoodButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit Donation" />
+        android:text="Submit Food"
+        android:layout_gravity="center"/>
 </LinearLayout>
