--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,6 @@
     <item name="foodName" type="id" />
     <item name="expiryDate" type="id" />
     <item name="submitFoodButton" type="id" />
+    <item name="signup_Button" type="id" />
+    <item name="logoutButton" type="id">logout button</item>
 </resources>
